# gork

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE.md  README.md  app.py  pyoxidizer.bzl  pyoxidizer.toml  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py
.github/: FUNDING.yml
.github/workflows/: coverage.yaml
gork/: __init__.py  ansi_color.py  cli.py  effect.py  image.py  main.py  palette.py  structs.py  term.py  utils.py
pyembed/: build.rs
scripts/: build.sh
tests/: __init__.py  test_image.py  test_term.py
