[tool.poetry]
name = "gork"
version = "0.1.0"
description = "Make images accessible"
authors = ["Gökmen Görgen <gkmngrgn@gmail.com>"]
license = "MIT"

[tool.poetry.scripts]
gork = "gork.main:run_cli"

[tool.poetry.dependencies]
python = "^3.8"
tqdm = "^4.45.0"
opencv-python-headless = "4.2.0.34"
numpy = "1.18.3"
scikit-image = "0.16.2"

[tool.poetry.dev-dependencies]
mypy = "^0.761"
black = "^19.10b0"
isort = "^4.3.21"
pytest = "5.4.1"
ipdb = "^0.13.2"
coverage = {version = "5.1", extras = ["toml"]}
unimport = "0.2.4"

[tool.black]
line-length = 119
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | venv
    | frontend
  )/
  | settings.py
)
'''

[tool.coverage.run]
source = ["./gork"]

[tool.isort]
force_grid_wrap = 0
include_trailing_comma = true
indent = "    "
line_length = 119
multi_line_output = 3
sections = [
    "FUTURE",
    "STDLIB",
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER",
]
use_parentheses = true

[tool.unimport]
exclude = ["./src"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
