[tool.poetry]
name = "gork"
version = "0.1.0"
description = "CLI based 8bit image pixelator, text & object recognition app."
authors = ["Gökmen Görgen <gkmngrgn@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.23.1"
scipy = "^1.8.1"
scikit-learn = "^1.1.1"
opencv-python-headless = "^4.6.0"
poetry = "^1.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pyinstaller = "^5.4.1"
pylint = "^2.15.2"

[tool.poetry.scripts]
gork = "gork.cli:run_cli"

[tool.poe.tasks.build]
cmd = "bash scripts/build.sh"
help = "Build gork"

[tool.poe.tasks.lint]
cmd = "pre-commit run --all-files"
help = "Check code quality"

[tool.poe.tasks.test]
cmd = "pytest -sk $name"
help = "Run tests"

[[tool.poe.tasks.test.args]]
name = "name"
positional = true
default = "test"
help = "Filter tests by $name"

[tool.pyright]
typeCheckingMode = "off"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
